header + play button test done

--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
         </div>
     </header>
 
-    <main>
-        
+    <!-- Main section -->
+    <main class="d-flex justify-content-between align-items-center">
+        <!-- Template game container -->
+        <!-- <div id="main-grid" ></div> -->
+
+        <!-- Template number cells -->
+        <!-- <div class="my-square"><span>x</span></div> -->
+
     </main>
 
     <script src="js/script.js"></script>
