--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     <!-- Main section -->
     <main class="d-flex justify-content-between align-items-center">
-        <!-- Template game container -->
-        <!-- <div id="main-grid" ></div> -->
+        <!-- Game container -->
+        <div id="main-grid" class="d-flex"></div>
 
         <!-- Template number cells -->
-        <!-- <div class="my-square"><span>x</span></div> -->
+        <!-- <div class="square"><span>x</span></div> -->
 
     </main>
 
