check if it is a safe or a bomb number done

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <!-- Template number cells -->
         <!-- <div class="square"><span>x</span></div> -->
 
+        <!-- User message -->
+
     </main>
 
     <script src="js/script.js"></script>
