bonus 1 bug fixed

--- a/index.html
+++ b/index.html
@@ -35,14 +35,19 @@
     </header>
 
     <!-- Main section -->
-    <main class="d-flex justify-content-between align-items-center">
-        <!-- Game container -->
-        <div id="main-grid" class="d-flex"></div>
+    <main class="d-flex justify-content-evenly align-items-center">
 
-        <!-- Template number cells -->
-        <!-- <div class="square"><span>x</span></div> -->
+        <!-- Game container -->
+        <div id="main-grid" class="d-flex">
+
+            <!-- Template number cells -->
+            <!-- <div class="square"><span>x</span></div> -->
+
+        </div>
 
         <!-- User message -->
+        <div id="game-over"></div>
+
 
     </main>
 
